@@ -1,5 +1,7 @@
-1.3.0:
- - ソケットバッファサイズを指定できるオプションを追加(-R/-S)
+1.3.0: 2010/3/1
+ - ソケットバッファサイズを指定できるオプションを追加
+ - -R オプション (SO_RCVBUF)
+ - -S オプション (SO_SNDBUF)
 
 1.2.2: 2010/2/25
  - makuosan.sysvをstatusとrestartに対応
