@@ -1,5 +1,6 @@
 1.3.0:
-
+ - add -R option (RCVBUF socket option value)
+ - add -S option (SNDBUF socket option value)
 
 1.2.2: 2010/2/25
  - makuosan.sysv 'status' and 'stop' option implement.
